# loopsentry

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
examples/: app.py  app_async.py  demo.db  loadtest.py  mock_server.py  report.html
examples/example_logs/: loadtest.html  loadtest.json
examples/example_logs/2026-03-01/: sentry_54811.jsonl
examples/example_logs/2026-03-08/: sentry_320318.jsonl
examples/example_logs_async_app/: loadtest.html  loadtest.json
src/loopsentry/: __init__.py  analyzer.py  cli.py  monitor.py  report_html.py
