[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopsentry"
version = "1.1.1"
description = "asyncio Eventloop Blockers Detector/Analyzer."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "amzker", email = "amzker@proton.me" }]
dependencies = [
    "psutil>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
loopsentry = "loopsentry.cli:main"

[project.optional-dependencies]
examples = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.1",
    "orjson>=3.10.0",
]
dev = [
    "requests",
    "aiohttp",
]

[project.urls]
Homepage = "https://github.com/amzker/loopsentry"
Repository = "https://github.com/amzker/loopsentry"
Issues = "https://github.com/amzker/loopsentry/issues"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
loopsentry = { workspace = true }

[dependency-groups]
dev = [
    "loopsentry",
]
